# MattingPlugin

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
src/MattingPlugin/: CMakeLists.txt
src/MattingPlugin/include/: MattingPlugin.h  SysDef.h
src/MattingPlugin/src/: MattingPlugin.cpp
src/Test/: CMakeLists.txt
src/Test/include/: TestFramework.h
src/Test/src/: TestFramework.cpp  main.cpp
